--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1747,4 +1747,11 @@ This version used in: {2}</value>
   <data name="Make_member_static" xml:space="preserve">
     <value>Make static</value>
   </data>
+  <data name="ChangeSignature_NewParameterIntroduceTODOVariable" xml:space="preserve">
+    <value>TODO</value>
+    <comment>"TODO" is an indication that there is work still to be done.</comment>
+  </data>
+  <data name="ChangeSignature_NewParameterOmitValue" xml:space="preserve">
+    <value>&lt;omit&gt;</value>
+  </data>
 </root>
