--- a/src/Features/Core/Portable/xlf/FeaturesResources.cs.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.cs.xlf
@@ -302,14 +302,19 @@
         <target state="translated">Implementovat všechna rozhraní implicitně</target>
         <note />
       </trans-unit>
+      <trans-unit id="Implement_all_members_explicitly">
+        <source>Implement all members explicitly</source>
+        <target state="new">Implement all members explicitly</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Implement_implicitly">
         <source>Implement implicitly</source>
         <target state="translated">Implementovat implicitně</target>
         <note />
       </trans-unit>
-      <trans-unit id="Implement_remaining_members_of_interface_explicitly">
-        <source>Implement remaining members of interface explicitly</source>
-        <target state="new">Implement remaining members of interface explicitly</target>
+      <trans-unit id="Implement_remaining_members_explicitly">
+        <source>Implement remaining members explicitly</source>
+        <target state="new">Implement remaining members explicitly</target>
         <note />
       </trans-unit>
       <trans-unit id="Indent_all_arguments">
@@ -985,11 +990,6 @@
       <trans-unit id="Global_Namespace">
         <source>Global Namespace</source>
         <target state="translated">Globální obor názvů</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Implement_interface_explicitly">
-        <source>Implement interface explicitly</source>
-        <target state="translated">Implementovat rozhraní explicitně</target>
         <note />
       </trans-unit>
       <trans-unit id="Implement_interface_abstractly">
