--- a/src/Features/Core/Portable/xlf/FeaturesResources.zh-Hans.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.zh-Hans.xlf
@@ -302,14 +302,19 @@
         <target state="translated">隐式实现所有接口</target>
         <note />
       </trans-unit>
+      <trans-unit id="Implement_all_members_explicitly">
+        <source>Implement all members explicitly</source>
+        <target state="new">Implement all members explicitly</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Implement_implicitly">
         <source>Implement implicitly</source>
         <target state="translated">隐式实现</target>
         <note />
       </trans-unit>
-      <trans-unit id="Implement_remaining_members_of_interface_explicitly">
-        <source>Implement remaining members of interface explicitly</source>
-        <target state="new">Implement remaining members of interface explicitly</target>
+      <trans-unit id="Implement_remaining_members_explicitly">
+        <source>Implement remaining members explicitly</source>
+        <target state="new">Implement remaining members explicitly</target>
         <note />
       </trans-unit>
       <trans-unit id="Indent_all_arguments">
@@ -985,11 +990,6 @@
       <trans-unit id="Global_Namespace">
         <source>Global Namespace</source>
         <target state="translated">全局命名空间</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Implement_interface_explicitly">
-        <source>Implement interface explicitly</source>
-        <target state="translated">显式实现接口</target>
         <note />
       </trans-unit>
       <trans-unit id="Implement_interface_abstractly">
