--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1753,4 +1753,7 @@ This version used in: {2}</value>
   <data name="Value_colon" xml:space="preserve">
     <value>Value:</value>
   </data>
+  <data name="Implement_through_0" xml:space="preserve">
+    <value>Implement through {0}</value>
+  </data>
 </root>
