--- a/src/Features/Core/Portable/xlf/FeaturesResources.ja.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.ja.xlf
@@ -307,6 +307,11 @@
         <target state="translated">暗黙的に実装する</target>
         <note />
       </trans-unit>
+      <trans-unit id="Implement_through_0">
+        <source>Implement through {0}</source>
+        <target state="new">Implement through {0}</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Indent_all_arguments">
         <source>Indent all arguments</source>
         <target state="translated">すべての引数にインデントを設定します</target>
