--- a/src/Features/Core/Portable/xlf/FeaturesResources.pt-BR.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.pt-BR.xlf
@@ -277,16 +277,6 @@
         <target state="translated">A implementação de 'GetHashCode' pode ser simplificada</target>
         <note />
       </trans-unit>
-      <trans-unit id="Implement all interfaces explicitly">
-        <source>Implement all interfaces explicitly</source>
-        <target state="translated">Implementar todas as interfaces explicitamente</target>
-        <note />
-      </trans-unit>
-      <trans-unit id="Implement explicitly">
-        <source>Implement explicitly</source>
-        <target state="translated">Implementar explicitamente</target>
-        <note />
-      </trans-unit>
       <trans-unit id="Implement_0_explicitly">
         <source>Implement '{0}' explicitly</source>
         <target state="translated">Implementar '{0}' explicitamente</target>
@@ -308,8 +298,8 @@
         <note />
       </trans-unit>
       <trans-unit id="Implement_through_0">
-        <source>Implement through {0}</source>
-        <target state="new">Implement through {0}</target>
+        <source>Implement through '{0}'</source>
+        <target state="new">Implement through '{0}'</target>
         <note />
       </trans-unit>
       <trans-unit id="Indent_all_arguments">
