--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1750,4 +1750,10 @@ This version used in: {2}</value>
   <data name="Implement_through_0" xml:space="preserve">
     <value>Implement through '{0}'</value>
   </data>
+  <data name="Implement_all_interfaces_explicitly" xml:space="preserve">
+    <value>Implement all interfaces explicitly</value>
+  </data>
+  <data name="Implement_explicitly" xml:space="preserve">
+    <value>Implement explicitly</value>
+  </data>
 </root>
